--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <h2>My Heroes</h2>
 <ul class="heroes">
   <li *ngFor="let hero of heroes" (click)="selectHero(hero)" [class.selected]= "hero === selectedHero" >
-    <span class="badge">{{hero.id}}</span>
+    <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
 <hero-detail [hero]= "selectedHero"></hero-detail>
