--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <h1>{{title}}</h1>
-<h2>My Heroes</h2>
-<ul class="heroes">
-  <li *ngFor="let hero of heroes" (click)="selectHero(hero)" [class.selected]= "hero === selectedHero" >
-    <span class="badge">{{hero.id}}</span> {{hero.name}}
-  </li>
-</ul>
-<hero-detail [hero]= "selectedHero"></hero-detail>
+   <nav>
+     <a routerLink="/dashboard">Dashboard</a>
+     <a routerLink="/hero">Heroes</a>
+   </nav>
+   <router-outlet></router-outlet>
