--- a/src/app/dashbord/dashbord.component.html
+++ b/src/app/dashbord/dashbord.component.html
@@ -1,3 +1,8 @@
-<h3>My Dashboard</h3>
 <h3>Top Heroes</h3>
-<a *ngFor="let hero of heroes"  [routerLink]="['/detail', hero.id]"  class="col-1-4">hero.name</a>
+<div class="grid grid-pad">
+  <a *ngFor="let hero of heroes"  [routerLink]="['/detail', hero.id]"  class="col-1-4">
+    <div class="module hero">
+      <h4>{{hero.name}}</h4>
+    </div>
+  </a>
+</div>
